# PageIndexOllama

./: .gitignore  CHANGELOG.md  ENHANCEMENTS_REPORT.md  LICENSE  Modelfile-mistral24b-16k  Modelfile.mistral24b  QUICK_START_MODEL.md  README.md  cli.py  ollama_setup.ps1  pyproject.toml  requirements.txt  run_comprehensive_e2e_tests.py  test_tree_gen.py
docs/: Ollama_Replacement_Implementation_Plan.txt  OpenAI_SDK_Dependency_Autopsy_Report.txt  REVISION_COMPLETION_SUMMARY.txt
pageindex/: chunking_config.py  config.yaml  continuation.py  credentials.py  model_capabilities.py  models.py  page_index.py  prompt_loader.py  response_handlers.py  utils.py
pageindex/prompts/: answer_generation.txt  doc_description_generation.txt  node_summary_generation.txt  prompt_registry.json  test_extract_synthesize.txt  test_tree_search.txt  toc_check_extraction_complete.txt  toc_check_title_appearance.txt  toc_check_title_start.txt  toc_check_transformation_complete.txt  toc_detect_page_index.txt  toc_detect_single_page.txt  toc_extract_content_continue.txt  toc_extract_content_init.txt  toc_generate_continue.txt  toc_generate_init.txt  toc_index_extractor.txt  toc_item_index_fixer.txt  toc_transformer_continue.txt  toc_transformer_init.txt  toc_transformer_pydantic.txt  tree_generation_structure.txt  tree_search.txt
scripts/: monitor_tests.sh  set_model_env.sh  setup_ollama.sh
tests/: test_credentials.py  test_dependencies.py  test_model_config.py
tests/e2e/: __init__.py  test_comprehensive.py  test_direct_integration.py  test_full_integration.py
(+3 files in other folders)
