[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pageindex-ollama"
version = "0.1.0"
description = "Local-first PageIndex fork powered by Ollama"
readme = { file = "README.md", content-type = "text/markdown" }
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.9"
authors = [
  { name = "Ashwin Gupta" }
]
keywords = ["rag", "ollama", "pdf", "retrieval", "llm"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Text Processing :: Indexing"
]
dependencies = [
  "openai==1.101.0",
  "requests>=2.31.0",
  "aiohttp>=3.9.0",
  "pymupdf==1.26.4",
  "PyPDF2==3.0.1",
  "python-dotenv==1.1.0",
  "tiktoken>=0.5.0",
  "pyyaml>=6.0.0"
]

[project.urls]
Homepage = "https://github.com/spice14/PageIndexOllama"
Repository = "https://github.com/spice14/PageIndexOllama"
Issues = "https://github.com/spice14/PageIndexOllama/issues"

[tool.setuptools.packages.find]
include = ["pageindex*"]

[tool.setuptools.package-data]
pageindex = ["config.yaml", "prompts/*.txt", "prompts/*.json"]
